[package]
name = "tidal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.8.0"
async-std = "1.12.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96" }
tokio = { version = "1.27.0", features = ["full"] }
